k8s/ragflow-knowledge-portal-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ragflow-knowledge-portal
  labels:
    app.kubernetes.io/component: ragflow-knowledge-portal
    app.kubernetes.io/instance: ragflow-knowledge-portal
    app.kubernetes.io/name: ragflow-knowledge-portal
    env_instance: "${ENV_INSTANCE}"
    project: "${PROJECT_NAME}"
    service: ragflow-knowledge-portal
spec:
  selector:
    app.kubernetes.io/component: ragflow-knowledge-portal
    app.kubernetes.io/instance: ragflow-knowledge-portal
    app.kubernetes.io/name: ragflow-knowledge-portal
  ports:
    - name: http
      port: 8080
      targetPort: http
